<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".campaign">

    <EditText
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background"
        android:hint="@string/search"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text1"
         />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/text"
        android:text="@string/campaign_credits"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/new_campaign"
        android:text="@string/clear"
        android:textColor="@color/Blue" />



    <Button
        android:id="@+id/new_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/addcustomer"
        android:text="@string/New_Campaign" />

    <Button
        android:id="@+id/addcustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/Add_new_customer"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:background="@color/Grey"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        android:layout_height="1.2dp"/>

    <CheckBox
        android:id="@+id/select_all_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:text="@string/select_all"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clear_selection"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:textColor="@color/Blue"
        app:layout_constraintBottom_toTopOf="@id/recyclerview_customer"
        app:layout_constraintTop_toBottomOf="@id/view"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_customer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_all_checkbox"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/floating"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</androidx.constraintlayout.widget.ConstraintLayout>