<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/table_layout_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:weightSum="5">

            <TextView
                android:id="@+id/data1"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/data2"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Credits_Used" />

            <TextView
                android:id="@+id/data3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Walkin_Customers" />

            <TextView
                android:id="@+id/data4"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:text="@string/Date" />

        </TableRow>


    </TableLayout>
    <View
        app:layout_constraintTop_toBottomOf="@id/table_layout_data"
        android:layout_width="match_parent"
        android:background="@color/Grey"
        android:layout_height="1dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>